[package]
name = "etf"
version = "0.1.0"
authors = ["Clark Kampfe <clark.kampfe@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
num-bigint = { version = "0.4", optional = true }
ordered-float = "2.8"
thiserror = "1"

[features]
default = ["bigint"]
bigint = ["num-bigint"]
preallocate = []

[dev-dependencies]
criterion = { version = "0.3", features = ["html_reports"] }

[[bench]]
name = "bench"
harness = false

[profile.bench]
codegen-units = 1
lto = true
